[gd_scene load_steps=7 format=3 uid="uid://cdks8j1gl68ry"]

[ext_resource type="FontFile" uid="uid://bg5hh6emi7q6" path="res://Assets/Minercraftory.ttf" id="1_castn"]
[ext_resource type="Script" path="res://Menus/MenuScreenMenus/options_menu.gd" id="1_s44ue"]
[ext_resource type="Texture2D" uid="uid://cxe30hlfin1l5" path="res://Assets/MenuBackground.PNG" id="3_ab00y"]

[sub_resource type="Theme" id="Theme_m0jo7"]
default_font = ExtResource("1_castn")

[sub_resource type="Theme" id="Theme_6x7n6"]
default_font_size = 70

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbhxc"]
bg_color = Color(0.6, 0.6, 0.6, 0.498039)

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_m0jo7")
script = ExtResource("1_s44ue")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ab00y")
expand_mode = 2
stretch_mode = 6

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="BoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Container"]
custom_minimum_size = Vector2(395, 110)
layout_mode = 2
size_flags_horizontal = 6
theme = SubResource("Theme_6x7n6")
text = "Settings
"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(425, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 26.015)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(83.95, 8.325)
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="Back" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wbhxc")
text = "Back"

[connection signal="value_changed" from="VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer2/Back" to="." method="_on_back_pressed"]
